--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+/.vscode/
+/data/
+*.log
+*.tmp
+/event-store
+/coverage.out
+/coverage.html
+.DS_Store
